alterações de icones

--- a/consultoria.html
+++ b/consultoria.html
@@ -226,7 +226,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="info-horizontal bg-gradient-info border-radius-xl d-block d-md-flex p-4">
-            <i class="material-icons text-white text-3xl">code</i>
+            <i class="material-icons text-white text-3xl">checklist</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
               <h5 class="text-white">Levantamento de requisitos</h5>
               <p class="text-white">Na consultoria de desenvolvimento de software, o levantamento de requisitos tem como finalidade 
@@ -238,7 +238,7 @@
         </div>
         <div class="col-lg-6 px-lg-1 mt-lg-0 mt-4">
           <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4 h-100">
-            <i class="material-icons text-gradient text-info text-3xl">school</i>
+            <i class="material-icons text-gradient text-info text-3xl">assignment_turned_in</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
               <h5>Projetos</h5>
               <p>Durante a fase de projeto, ideias são trabalhadas e organizadas estrategicamente. Todos os requisitos do cliente são 
@@ -250,7 +250,7 @@
         </div>
         <div class="col-lg-6 px-lg-1 mt-lg-0 mt-4">
           <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4 h-100">
-            <i class="material-icons text-gradient text-info text-3xl">api</i>
+            <i class="material-icons text-gradient text-info text-3xl">code</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
               <h5>Desenvolvimento</h5>
               <p>Após o término da fase de projeto, inicia-se o desenvolvimento do software. Nesta fase, diferentes tarefas e pontos 
@@ -264,7 +264,7 @@
         </div>
         <div class="col-lg-6 px-lg-1 mt-lg-0 mt-4 pt-2">
           <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4 h-100">
-            <i class="material-icons text-gradient text-info text-3xl">analytics</i>
+            <i class="material-icons text-gradient text-info text-3xl">bug_report</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
               <h5>Testes</h5>
               <p>Nesta etapa da consultoria em desenvolvimento de software, são realizados diversos testes para validar sua qualidade, 
@@ -288,7 +288,7 @@
         </div>
         <div class="col-lg-12 px-lg-1 mt-lg-1 mt-4 pt-2">
           <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4">
-            <i class="material-icons text-gradient text-info text-3xl">developer_board</i>
+            <i class="material-icons text-gradient text-info text-3xl">contact_support</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
               <h5>E agora?</h5>
               <p>Agora que você conhece as etapas envolvidas na consultoria de desenvolvimento de software, que tal dar sequência ao 
