--- a/treinamento.html
+++ b/treinamento.html
@@ -31,7 +31,7 @@
       <div class="col-12">
         <nav class="navbar navbar-expand-lg  blur border-radius-xl top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
           <div class="container-fluid px-0">
-            <a class="navbar-brand font-weight-bolder ms-sm-3" href="./index.html" rel="tooltip" title="Insights Machine" data-placement="bottom" target="_blank">
+            <a class="navbar-brand font-weight-bolder ms-sm-3" href="./index.html" rel="tooltip" title="Insights Machine" data-placement="bottom">
               <img src="./assets/img/logos/logo.png" alt="logo" width="30" height="24" class="d-inline-block ml-0">
               Insights Machine
             </a>
@@ -228,7 +228,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="info-horizontal bg-gradient-info border-radius-xl d-block d-md-flex p-4">
-            <i class="material-icons text-white text-3xl">code</i>
+            <i class="material-icons text-white text-3xl">help_outline</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
               <h5 class="text-white">Para quem é o curso de power BI?</h5>
               <p class="text-white">Acima de tudo o curso serve para qualquer profissional ou estudante interessado em Análise de dados para Negócios. Isto é,
@@ -240,7 +240,7 @@
         </div>
         <div class="col-lg-6 px-lg-1 mt-lg-0 mt-4">
           <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4 h-100">
-            <i class="material-icons text-gradient text-info text-3xl">api</i>
+            <i class="material-icons text-gradient text-info text-3xl">task_alt</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
               <h5>Qual a finalidade deste treinamento?</h5>
               <p>Este treinamento de nível avançado, tem como propósito dar ao profissional conhecimentos sólidos na criação e manuseio da ferramenta do Power BI como resultado tornar um desenvolvedor.</p>
@@ -249,7 +249,7 @@
         </div>
         <div class="col-lg-12 px-lg-1 mt-lg-0 mt-4 pt-2">
           <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4 h-100">
-            <i class="material-icons text-gradient text-info text-3xl">analytics</i>
+            <i class="material-icons text-gradient text-info text-3xl">groups</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
               <h5>Público Alvo</h5>
               <p>Esse curso embora seja avançado, tem como finalidade habilitar profissionais de qualquer área que necessitam trabalhar e analisar grandes volumes de dados, 
@@ -313,7 +313,7 @@
             <div class="col-lg-6 col-12">
               <div class="p-3 info-horizontal">
                 <div class="icon icon-shape text-center">
-                  <i class="fas fa-check-double fs-4 opacity-10"></i>
+                  <i class="fas fa-certificate fs-4 opacity-10"></i>
                 </div>
                 <div class="description ps-3">
                   <p class="mb-0 text-white">Identificar os requisitos principais do dashboard que será construído.</p>
@@ -321,7 +321,7 @@
             </div>
             <div class="p-3 info-horizontal">
               <div class="icon icon-shape text-center">
-                <i class="fas fa-check-double fs-4 opacity-10 text-white"></i>
+                <i class="fas fa-certificate fs-4 opacity-10 text-white"></i>
               </div>
               <div class="description ps-3">
                 <p class="mb-0 text-white">Especificar todos os requisitos e documenta-los, para utilizar em futuras manutenções e melhorias.</p>
@@ -329,7 +329,7 @@
           </div>
           <div class="p-3 info-horizontal">
             <div class="icon icon-shape text-center">
-              <i class="fas fa-check-double fs-4 opacity-10"></i>
+              <i class="fas fa-certificate fs-4 opacity-10"></i>
             </div>
             <div class="description ps-3">
               <p class="mb-0 text-white">Desenhar e implantar modelos de dados no Power BI, dentro das melhores práticas do Business Intelligence.</p>
@@ -337,7 +337,7 @@
         </div>
         <div class="p-3 info-horizontal">
           <div class="icon icon-shape text-center">
-            <i class="fas fa-check-double fs-4 opacity-10"></i>
+            <i class="fas fa-certificate fs-4 opacity-10"></i>
           </div>
           <div class="description ps-3">
             <p class="mb-0 text-white">
@@ -346,7 +346,7 @@
         </div>
         <div class="p-3 info-horizontal">
           <div class="icon icon-shape text-center">
-            <i class="fas fa-check-double fs-4 opacity-10"></i>
+            <i class="fas fa-certificate fs-4 opacity-10"></i>
           </div>
           <div class="description ps-3">
             <p class="mb-0 text-white">Utilizar o Power BI como sua principal ferramenta de qualidade, transformação e manipulação dos dados, para obter os resultados esperados;</p>
@@ -354,7 +354,7 @@
       </div>
       <div class="p-3 info-horizontal">
         <div class="icon icon-shape text-center">
-          <i class="fas fa-check-double fs-4 opacity-10"></i>
+          <i class="fas fa-certificate fs-4 opacity-10"></i>
         </div>
         <div class="description ps-3">
           <p class="mb-0 text-white">Identificar os requisitos principais do dashboard que será construído.</p>
@@ -362,7 +362,7 @@
         </div>
         <div class="p-3 info-horizontal">
         <div class="icon icon-shape text-center">
-          <i class="fas fa-check-double fs-4 opacity-10"></i>
+          <i class="fas fa-certificate fs-4 opacity-10"></i>
         </div>
         <div class="description ps-3">
           <p class="mb-0 text-white">Construir Dashboards no Power BI, utilizando as melhores praticas de Business Intelligence, Visualização de Dados e Governança de dados;</p>
@@ -372,7 +372,7 @@
       <div class="col-lg-6 col-12">
         <div class="p-3 info-horizontal">
           <div class="icon icon-shape text-center">
-            <i class="fas fa-check-double fs-4 opacity-10"></i>
+            <i class="fas fa-certificate fs-4 opacity-10"></i>
           </div>
           <div class="description ps-3">
             <p class="mb-0 text-white">Desenvolver métricas, indicadores e colunas calculadas de forma ágil e simples, utilizando DAX (Data Analysis Expressions).</p>
@@ -380,7 +380,7 @@
         </div>
       <div class="p-3 info-horizontal">
         <div class="icon icon-shape text-center">
-          <i class="fas fa-check-double fs-4 opacity-10"></i>
+          <i class="fas fa-certificate fs-4 opacity-10"></i>
         </div>
         <div class="description ps-3">
           <p class="mb-0 text-white">Realizar simulações através dos dados, utilizando parâmetros, no Power BI.</p>
@@ -388,7 +388,7 @@
       </div>
       <div class="p-3 info-horizontal">
         <div class="icon icon-shape text-center">
-          <i class="fas fa-check-double fs-4 opacity-10"></i>
+          <i class="fas fa-certificate fs-4 opacity-10"></i>
         </div>
         <div class="description ps-3">
             <p class="mb-0 text-white">Desenvolver análises preditivas, utilizando a funcionalidade de Analytics do Power BI;</p>
@@ -396,7 +396,7 @@
         </div>
       <div class="p-3 info-horizontal">
         <div class="icon icon-shape text-center">
-          <i class="fas fa-check-double fs-4 opacity-10"></i>
+          <i class="fas fa-certificate fs-4 opacity-10"></i>
         </div>
         <div class="description ps-3">
           <p class="mb-0 text-white">Agendar atualizações automáticas em seus dados, utilizando o Power BI On-Premises Data Gateway.</p>
@@ -404,7 +404,7 @@
       </div>
       <div class="p-3 info-horizontal">
         <div class="icon icon-shape text-center">
-          <i class="fas fa-check-double fs-4 opacity-10"></i>
+          <i class="fas fa-certificate fs-4 opacity-10"></i>
         </div>
         <div class="description ps-3">
           <p class="mb-0 text-white">Disponibilizar suas análises para serem acessadas atráves de smatrphones e tablets (IOS e Android), via Power BI Service.</p>
@@ -412,7 +412,7 @@
       </div>
     <div class="p-3 info-horizontal">
       <div class="icon icon-shape text-center">
-        <i class="fas fa-check-double fs-4 opacity-10"></i>
+        <i class="fas fa-certificate fs-4 opacity-10"></i>
       </div>
       <div class="description ps-3">
         <p class="mb-0 text-white">Extrair o máximo de produtividade do Self_Service BI, utilizando o Power Bi dentro das melhores práticas de BI.</p>
@@ -420,7 +420,7 @@
     </div>
     <div class="p-3 info-horizontal">
       <div class="icon icon-shape text-center">
-        <i class="fas fa-check-double fs-4 opacity-10"></i>
+        <i class="fas fa-certificate fs-4 opacity-10"></i>
       </div>
       <div class="description ps-3">
         <p class="mb-0 text-white">Power BI + Office 365.</p>
@@ -428,7 +428,7 @@
     </div>
     <div class="p-3 info-horizontal">
       <div class="icon icon-shape text-center">
-        <i class="fas fa-check-double fs-4 opacity-10"></i>
+        <i class="fas fa-certificate fs-4 opacity-10"></i>
       </div>
       <div class="description ps-3">
         <p class="mb-0 text-white">Cases do mundo coorporativo.</p>
@@ -453,7 +453,7 @@
         <div class="col-md-2 col-12 position-relative">
           <div class="p-3 text-center">
             <div class="icon icon-shape  bg-gradient-info shadow-info text-center">
-              <i class="fas fa-award text-lg opacity-10"></i>
+              <i class="fas fa-graduation-cap text-lg opacity-10"></i>
             </div>
             <h6 class="mt-3 text-white">Certificado digital</h6>
           </div>    
