--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
                     Business Intelligence
                   </a>
                 </li>
-
                 <li class="nav-item dropdown dropdown-hover mx-2">
                   <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuDocs" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md">assessment</i>
@@ -103,7 +102,6 @@
                     </div>
                   </ul>
                 </li>
-               
                 <li class="nav-item dropdown dropdown-hover mx-2">
                   <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuDocs" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md">dashboard</i>
@@ -151,7 +149,6 @@
                     </div>
                   </ul>
                 </li>
-
                 <li class="nav-item dropdown dropdown-hover mx-2">
                   <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md">email</i>
@@ -183,7 +180,6 @@
                     </div>
                   </div>
                 </li>
-                
                 <li class="nav-item my-auto ms-3 ms-lg-0">
                   <a href="./cliente.html" class="btn btn-sm  bg-gradient-danger  mb-0 me-1 mt-2 mt-md-0">Área do cliente</a>
                 </li>
@@ -327,14 +323,13 @@
           </div>
           <div class="col-md-5 ms-auto m-4">
             <div class="position-relative">
-              <img class="max-width-50 w-100 position-relative z-index-2" src="./assets/img/banner/94599-contact-us.gif" alt="image">
+              <div class=" max-width-50 w-100 position-relative z-index-2 anime"></div>              
             </div>
           </div>
         </div>
       </div>
     </section>
   </div>
-
   <!--footer-->
   <footer class="footer pt-5 mt-4">
     <div class="container">
@@ -432,9 +427,12 @@
   <script src="./assets/js/plugins/choices.min.js"></script>
   <!--  Plugin for Parallax -->
   <script src="./assets/js/plugins/parallax.min.js"></script>
-  <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
+  <!-- bootstrap -->
   <script src="./assets/js/bootstrap-kit.min.js?v=3.0.0" type="text/javascript"></script>
-  
+  <!--lotties plugin-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.8.1/lottie.min.js" integrity="sha512-V1YyTKZJrzJNhcKthpNAaohFXBnu5K9j7Qiz6gv1knFuf13TW/3vpgVVhJu9fvbdW8lb5J6czIhD4fWK2iHKXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!--animate-->
+  <script src="./assets/js/plugins/animate.js"></script>
 </body>
 
 </html>
