--- a/paginaconst.html
+++ b/paginaconst.html
@@ -247,8 +247,12 @@
   <script src="./assets/js/plugins/choices.min.js"></script>
   <!--  Plugin for Parallax -->
   <script src="./assets/js/plugins/parallax.min.js"></script>
-  <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
+  <!-- Bootstrap -->
   <script src="./assets/js/bootstrap-kit.min.js?v=3.0.0" type="text/javascript"></script>
+  <!--lotties plugin-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.8.1/lottie.min.js" integrity="sha512-V1YyTKZJrzJNhcKthpNAaohFXBnu5K9j7Qiz6gv1knFuf13TW/3vpgVVhJu9fvbdW8lb5J6czIhD4fWK2iHKXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!--animate-->
+  <script src="./assets/js/plugins/animate.js"></script>
   
 </body>
 
