--- a/qsomos.html
+++ b/qsomos.html
@@ -179,7 +179,6 @@
                     </div>
                   </div>
                 </li>
-                
                 <li class="nav-item my-auto ms-3 ms-lg-0">
                   <a href="./cliente.html" class="btn btn-sm  bg-gradient-danger  mb-0 me-1 mt-2 mt-md-0">Área do cliente</a>
                 </li>
@@ -319,7 +318,6 @@
         </div>
       </div>
     </div>
-
     <div class="row mt-4">
       <div class="col-lg-6 col-12">
         <div class="card card-profile mt-4 z-index-2">
@@ -526,7 +524,7 @@
       </div>
       <div class="col-md-5 ms-auto m-6">
         <div class="position-relative">
-          <img class="max-width-50 w-100 position-relative z-index-2 rounded-2" src="./assets/img/banner/94599-contact-us.gif" alt="image">
+          <div class=" max-width-50 w-100 position-relative z-index-2 anime"></div> 
         </div>
       </div>
     </div>
@@ -631,8 +629,11 @@
   <script src="./assets/js/plugins/choices.min.js"></script>
   <!--  Plugin for Parallax -->
   <script src="./assets/js/plugins/parallax.min.js"></script>
-  <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
+  <!-- Bootstrap-->
   <script src="./assets/js/bootstrap-kit.min.js?v=3.0.0" type="text/javascript"></script>
+  <!--lotties plugin-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.8.1/lottie.min.js" integrity="sha512-V1YyTKZJrzJNhcKthpNAaohFXBnu5K9j7Qiz6gv1knFuf13TW/3vpgVVhJu9fvbdW8lb5J6czIhD4fWK2iHKXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <!--animate-->
+  <script src="./assets/js/plugins/animate.js"></script>
   
 </body>
 
