--- a/treinamento.html
+++ b/treinamento.html
@@ -262,6 +262,7 @@
       </div>
     </div>
     <!-- -------- end section skills ------- -->
+
     <!-- -------- description -------- -->
     <section class="pb-5 position-relative bg-gradient-dark mx-n3 my-4">
       <div class="container">
@@ -534,7 +535,7 @@
           </div>
           <div class="col-md-5 ms-auto m-4">
             <div class="position-relative">
-              <img class="max-width-50 w-100 position-relative z-index-2 rounded-2" src="./assets/img/banner/94599-contact-us.gif" alt="image">
+              <div class=" max-width-50 w-100 position-relative z-index-2 anime"></div>
             </div>
           </div>
         </div>
@@ -639,8 +640,12 @@
   <script src="./assets/js/plugins/choices.min.js"></script>
   <!--  Plugin for Parallax -->
   <script src="./assets/js/plugins/parallax.min.js"></script>
-  <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
+  <!-- Bootstrap -->
   <script src="./assets/js/bootstrap-kit.min.js?v=3.0.0" type="text/javascript"></script>
+  <!--lotties plugin-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.8.1/lottie.min.js" integrity="sha512-V1YyTKZJrzJNhcKthpNAaohFXBnu5K9j7Qiz6gv1knFuf13TW/3vpgVVhJu9fvbdW8lb5J6czIhD4fWK2iHKXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!--animate-->
+  <script src="./assets/js/plugins/animate.js"></script>
 </body>
 
 </html>
