--- a/paginaconst.html
+++ b/paginaconst.html
@@ -206,9 +206,9 @@
                           <h2 class="text-dark mb-0">Pagina em construção</h2>
                           <p class="">Em breve teremos novidades para vocês!</p>
                         </div>
-                        <div class="col-12 ms-6">
-                            <div class="container">
-                              <img class="w-40 h-100 img-fluid" src="./assets/img/banner/80248-under-construction.gif" alt="image">
+                        <div class="col-12 ms-6 justify-content-center text-center">
+                            <div class="container w-70 ">
+                             <div class="work position-relative"></div>
                             </div>
                           </div>
                       </div>
